--- a/app/views/users/sign_in.html.haml
+++ b/app/views/users/sign_in.html.haml
@@ -1,4 +1,4 @@
-= form_tag sign_in_path do
+= form_tag auth_path do
   %p
     = label_tag :username, "Username or Email Address"
     = text_field_tag :username, params[:username]
