--- a/app/assets/javascripts/backbone/templates/accounts/new.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/accounts/new.jst.ejs
@@ -1,9 +1,13 @@
-= form_tag sign_up_path do
+= form_tag account_path do
   %p
     = label_tag :username, "Username or Email Address"
     = text_field_tag :username, params[:username]
   %p
-    = label_tag :password
+    = label_tag :password, "Password"
     = password_field_tag :password
   %p
+    = label_tag :confirm_password, "Confirm password"
+    = password_field_tag :confirm_password
+  %p
     = submit_tag "Sign up"
+
