--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,9 @@
-<div>
-  <script type="text/javascript">
+<script type="text/javascript">
     $(function() {
       window.app = new Privydo.Routers.Signup;
       Backbone.history.start();
       });
-  </script>
+</script>
+
+<div id="app">
 </div>
