Improve tasks, add more context stuff

--- a/app/assets/javascripts/backbone/templates/tasks/task.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/task.js.jst.ejs
@@ -5,7 +5,7 @@
 		<img src="/assets/putoff.png" class='putoff'>
 	</div>
 
-	<div class='task_date'></div>
+	<div class='task_date'><span style="color: #999; font-size: 14px" class="add_date">[Add date]</span></div>
 	
 	<div class='edit_text'>
 		<input type='text' value='' class='task-text-input'>
