Styled the context menu to look a bit nicer

--- a/app/assets/javascripts/backbone/templates/tasks/context.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/context.js.jst.ejs
@@ -1,5 +1,5 @@
 <div class='display'>
-	<div class='context'></div>
+	<a href="#" class='context'></a>
 </div>
 <div class='edit'>
 	<input type='text'>
