--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -44,7 +44,7 @@ html {
   }
 
 #app {
-  width: 480px;
+  width: 700px;
   margin: 0 auto 40px;
   background: white;
   padding: 20px;
@@ -54,10 +54,10 @@ html {
   box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
 }
   #app h1 {
-    font-size: 36px;
+    font-size: 30px;
     font-weight: bold;
     text-align: center;
-    padding: 20px 0 30px 0;
+    padding: 10px 0 10px 0;
     line-height: 1;
   }
 
@@ -65,7 +65,7 @@ html {
   position: relative;
 }
   #create-task input {
-    width: 466px;
+    width: 687px;
     font-size: 24px;
     font-family: inherit;
     line-height: 1.4em;
@@ -177,19 +177,48 @@ html {
     vertical-align: middle;
   }
 
-
 #contexts {
-  list-style-type: none;
-  z-index: 4000;
+  margin-bottom:5px;
+  padding:0;
+  line-height:normal;
+  position: relative;
 }
 
-#contexts li {
+ul#contexts-list {
+	margin:0;
+	padding:0;
+	list-style-type:none;
+	position:relative;
+	display:block;
+	height:65px;
+	font-size:14px;
+	font-weight:bold;
+	background:url("/assets/nav_up.jpg") repeat-x top left;
+}
+
+#contexts-list li {
+  display:block;
   float: left;
   padding: 4px;
+  margin:0;
+  padding:0;
+  z-index: 2000
 }
 
-#contexts li.selected {
-  color: blue;
+#contexts-list li a {
+  display:block;
+  float:left;
+  color:#888888;
+  text-decoration:none;
+  font-weight:bold;
+  padding:20px 40px 0 40px;
+  height:40px;
+  margin:0;
+}
+
+#contexts-list li.selected {
+  background: url("/assets/down.jpg") no-repeat top center;	
+  color:#484949;
 }
 
 #contexts .editing .display,
@@ -203,3 +232,10 @@ html {
   #contexts .editing input {
     width: 70px;
   }
+
+#add-context {
+  position: absolute;
+  right: 0px;
+  top: 10px;
+  z-index: 2001
+}
