--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,18 +6,24 @@
       Backbone.history.start();
       });
 </script>
-<div id='contexts'>
-	<ul id='contexts-list'></ul>
-	<img src='/assets/add.png' id='add-context'>
-</div>
-<div id='app'>
 
+<div id='app'>
+	<h1>comacho</h1>
+
+	<div id='contexts'>
+			<img src='/assets/add.png' id='add-context'>
+		<ul id='contexts-list'>
+		</ul>
+	
+	</div>
 	<div id='create-task'></div>
 	<div id='tasks'>
 		<ul id='task-list'></ul>
 	</div>
+	
+	<div style='text-align: center; position: absolute; top: 15px;'>
+		<img src='/assets/bin.png' id='bin' >
+	</div>
 </div>
 
-<div style='text-align: center'>
-	<img src='/assets/bin.png' id='bin' >
-</div>
+
