--- a/app/assets/javascripts/backbone/templates/tasks/page.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/page.js.jst.ejs
@@ -1,1 +1,1 @@
-<input type="text" id="add_task" placeholder="Enter new task">
+<input type="text" id="add_task" placeholder="Buy bacon for next week">
