--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,23 +7,26 @@
       });
 </script>
 
+<div id='contexts'>
+  <h2>Contexts: <img src='/assets/add.png' id='add-context'></h2>
+	<ul id='contexts-list'>
+	</ul>
+
+</div>
+
 <div id='app'>
 	<h1>comacho</h1>
 
-	<div id='contexts'>
-			<img src='/assets/add.png' id='add-context'>
-		<ul id='contexts-list'>
-		</ul>
-	
-	</div>
 	<div id='create-task'></div>
 	<div id='tasks'>
 		<ul id='task-list'></ul>
 	</div>
 	
-	<div style='text-align: center; position: absolute; top: 15px;'>
-		<img src='/assets/bin.png' id='bin' >
-	</div>
+	
+</div>
+
+<div style='text-align: center; float:right; left: 200px;'>
+	<img src='/assets/bin.png' id='bin' >
 </div>
 
 
