need to push to heroku

--- a/app/assets/javascripts/backbone/templates/tasks/context.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/context.js.jst.ejs
@@ -1,5 +1,5 @@
 <div class='display'>
-	<a href="#" class='context'></a>
+	<span class='context'></span>
 </div>
 <div class='edit'>
 	<input type='text'>
