--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -113,6 +113,13 @@ html {
       display: inline;
     }
 
+    #task-list .done-task .task_text, .done-task .task_date
+    {
+      display: inline;
+      text-decoration: line-through;
+      color: gray;
+    }
+
     #task-list .task_date
     {
       display: inline;
@@ -213,12 +220,13 @@ ul#contexts-list {
   z-index: 2000
 }
 
-#contexts-list li a {
+#contexts-list li span {
   display:block;
   color:#888888;
   text-decoration:none;
   height:25px;
   margin:0;
+  cursor: pointer;
 }
 
 #contexts-list li.selected {
