Display environment for testing.

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <div id='app'>
-	<h1>comacho</h1>
+  <h1>comacho - <%= ENV['RAILS_ENV'] %></h1>
 
 	<div id='create-task'></div>
 	<div id='tasks'>
