--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -2,84 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-weight: inherit;
-  font-style: inherit;
-  font-size: 100%;
-  font-family: inherit;
-  vertical-align: baseline;
-}
-body {
-  line-height: 1;
-  color: black;
-  background: white;
-}
-ol, ul {
-  list-style: none;
-}
-a img {
-  border: none;
-}
-
-html {
-  background: #eeeeee;
-}
-  body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    line-height: 1.4em;
-    background: #eeeeee;
-    color: #333333;
-  }
-
-#app {
-  width: 700px;
-  margin: 0 auto 40px;
-  background: white;
-  padding: 20px;
-  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
-  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
-}
-  #app h1 {
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    padding: 10px 0 10px 0;
-    line-height: 1;
-  }
-
-  #app h2 {
-    font-size: 15px;
-    font-weight: bold;
-    padding: 10px 0 10px 0;
-    line-height: 1;
-  }
-
-
 #create-task {
+  margin-top: 10px;
   position: relative;
 }
   #create-task input {
     width: 687px;
     font-size: 24px;
     font-family: inherit;
-    line-height: 1.4em;
+    line-height: 0.8em;
     border: 0;
     outline: none;
-    padding: 6px;
+    padding: 4px;
     border: 1px solid #999999;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
@@ -98,15 +32,24 @@ html {
   }
 
 #task-list {
+  width: 780px;
   margin-top: 10px;
 }
   #task-list li {
-    padding: 12px 20px 11px 0;
+    padding: 12px 0 11px 0;
     position: relative;
     font-size: 18px;
+    text-decoration: none;
     line-height: 1.1em;
+    min-height: 1.1em;
     border-bottom: 1px solid #cccccc;
   }
+
+    #task-list .task
+    {
+      width: 699px;
+      display: inline-block;
+    }  
 
     #task-list .task_text
     {
@@ -155,14 +98,13 @@ html {
     }
 
     #task-list .editing_text input {
-      width: 360px;
+      width: 550px;
       font-size: 18px;
       font-family: inherit;
-      margin: 0;
-      line-height: 1.0em;
+      line-height: 1.1em;
       border: 0;
       outline: none;
-      padding: 4px 2px 0px 6px;
+      padding: 6px 4px 0px 6px;
       border: 1px solid #999999;
     }
     
@@ -178,51 +120,58 @@ html {
       border: 1px solid #999999;
      }
 
-  #task-list .task-menu
+  .task-menu
   {
+    width: 70px;
+    padding-left: 1px;
     display: none;
-    position: absolute;
-    right: 100px;
-    top: 5px;
+    height: 3px;
     vertical-align: middle;
+    bottom: 8px;
+    position: relative;
+    float: right;
   }
 
-  #task-list .task-menu img
+  .task-menu img
   {
     vertical-align: middle;
+    cursor: pointer;
   }
 
 #contexts {
-  margin-bottom:5px;
-  padding:0;
-  line-height:normal;
+  margin-top:10px;
   position: relative;
-  left: 130px;
-  top: 50px;
-  float: left;
+	font-size:16px;
+  font-weight: bold;
+  overflow: visible;
+  z-index: 3000;
 }
 
 ul#contexts-list {
-	margin:0;
-	padding:0;
 	list-style-type:none;
 	position:relative;
+  padding: 0;
+  margin-top: 18px;
 	display:block;
-	height:65px;
-	font-size:14px;
 }
 
 #contexts-list li {
   display:block;
   padding: 4px;
-  margin:0;
-  padding:0;
-  z-index: 2000
 }
 
 #contexts-list li span {
   display:block;
-  color:#888888;
+  color: #4a4546;
+  text-decoration:none;
+  height:25px;
+  margin:0;
+  cursor: pointer;
+}
+
+.dragged-context li span {
+  display:block;
+  color: #4a4546;
   text-decoration:none;
   height:25px;
   margin:0;
@@ -230,8 +179,8 @@ ul#contexts-list {
 }
 
 #contexts-list li.selected {
-  color:#484949;
-  font-weight:bold;
+  color: #000;
+  text-decoration:underline;
 }
 
 #contexts .editing .display,
@@ -246,10 +195,19 @@ ul#contexts-list {
     width: 70px;
   }
 
+#add-context 
+{
 
+  cursor: pointer;
+}
+
+#add-context:hover
+{
+  opacity:0.8;
+}
 
 .overdue {
-  color: red;
+  color: #cc3d2c;
   font-weight: bold;
 }
 
