--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,3 @@
-<%= link_to 'Sign out', session_path, :method => :delete %>
 <script type="text/javascript">
     $(function() {
 	  window.username = '<%= URI.escape user.username %>'
@@ -7,26 +6,23 @@
       });
 </script>
 
-<div id='contexts'>
-  <h2>Contexts: <img src='/assets/add.png' id='add-context'></h2>
-	<ul id='contexts-list'>
-	</ul>
+<div id="main" class="row border">
+  <div id="contexts" class="column grid_2">
+    <img src='/assets/add-list.png' id='add-context'>
+	  <ul id='contexts-list'>
+	  </ul>
 
-</div>
+  </div>
+  <div id="app" class="column grid_8">
+	  <div id='create-task'></div>
+	  <div id='tasks'>
+		  <ul id='task-list'></ul>
+	  </div>
+  </div> 
+ </div>
 
-<div id='app'>
-  <h1>comacho - <%= ENV['RAILS_ENV'] %></h1>
-
-	<div id='create-task'></div>
-	<div id='tasks'>
-		<ul id='task-list'></ul>
-	</div>
-	
-	
-</div>
-
-<div style='text-align: center; float:right; left: 200px;'>
+<!-- <div style='text-align: center; float:right; left: 200px;'>
 	<img src='/assets/bin.png' id='bin' >
-</div>
+</div> -->
 
 
