--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,17 @@
 <script type="text/javascript">
-    $(function() {
+  $(function() {
       window.app = new Privydo.Routers.Signup;
       Backbone.history.start();
       });
 </script>
 
-<div id="app">
+<div class="row">
+  <div id="blurb" class="column grid_3">
+    <h1>Sign up to irontask.</h1>
+    <h2>pre-alpha. fragile ;)</h2>
+  </div>
+  <div class="column grid_7">
+    <div id="app">
+    </div>
+  </div>
 </div>
