--- a/app/assets/javascripts/backbone/templates/accounts/new.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/accounts/new.js.jst.ejs
@@ -1,5 +1,5 @@
-<div id="form">
 <form>
+<div id="form">
 	<p>
 		<input name="username" type="text" placeholder="Username or email">
  	</p>
@@ -16,19 +16,19 @@
  	<div class="submit">
 		<button>Sign me up!</button>
 	</div>
-</form>    
 </div>
 <div id="validation">
 		<p>
-		<label for="username">Enter a username or your email address</label>
+		<label id="sidetip-username" for="username">Enter a username or your email address</label>
 		</p>
 		<p>
-		<label for="password">Choose a secure password</label>
+		<label id="sidetip-password" for="password">Choose a secure password</label>
 		</p>
 		<p>
-		<label for="confirm_password">Type it again, so we know it's right</label>
+		<label id="sidetip-confirm_password" for="confirm_password">Type it again, so we know it's right</label>
 		</p>
 		<p>
-		<label for="confirm_password">Enter the secret password (oooOOoh)</label>
+		<label for="secret">Enter the secret password (oooOOoh)</label>
 		</p>		
 </div>
+</form>    
