Give inputs names to help with finding them with capybara/selenium.

--- a/app/assets/javascripts/backbone/templates/tasks/task.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/task.js.jst.ejs
@@ -3,10 +3,10 @@
 	<div class='task_date'><span style="color: #999; font-size: 14px; cursor: pointer;" class="add_date">[Add date]</span></div>
 	
 	<div class='edit_text'>
-		<input type='text' value='' class='task-text-input'>
+		<input type='text' name='text_input' value='' class='task-text-input'>
 	</div>
 	<div class='edit_date'>
-		<input type='text' value='' class='task-date-input'>
+		<input type='text' name='date_input' value='' class='task-date-input'>
 	</div>
 </div>
 <div class='task-menu'>
