--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,11 @@
        <div id="notice-bar">
           <%= flash[:notice] %>
         </div>
+        <% if flash[:notice] %>
+          <script>
+            new Privydo.Views.Notice( {message: '<%= flash[:notice] %>'});
+          </script>
+        <% end %>
         <div class="rubbish">
         </div>
       </div>
