Cucumber, RSpec & Jasmine tests now all pass. Some more specs needed, but this'll do for now.
Also refactored quite a lot.

--- a/app/assets/javascripts/backbone/templates/tasks/task.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/task.js.jst.ejs
@@ -1,12 +1,12 @@
 <div class='task'>
 	<div class='task_text'></div>	
-	<div class='task_date'><span style="color: #999; font-size: 14px; cursor: pointer;" class="add_date">[Add date]</span></div>
+	<div class='task_date'><span style="color: #999; font-size: 14px; cursor: pointer;" class="task_date">[Add date]</span></div>
 	
 	<div class='edit_text'>
-		<input type='text' name='text_input' value='' class='task-text-input'>
+		<input type='text' name='text_input' value='' class='task_text_input'>
 	</div>
 	<div class='edit_date'>
-		<input type='text' name='date_input' value='' class='task-date-input'>
+		<input type='text' name='date_input' value='' class='task_date_input'>
 	</div>
 </div>
 <div class='task-menu'>
