--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
        </div>
 
       <div id="logo">
-        <img src="/assets/logo.png">
+        <a href="/"><img src="/assets/logo.png"></a>
       </div>
       <div id="navigation"> 
         <ul>
