Add sign up link to sign in page.

--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -97,3 +97,16 @@
   padding-bottom: 26px;
   padding-top: 10px;
 }
+
+.sign-up
+{
+  text-align:center;
+  margin-top: 20px;
+  margin-right: 6px;
+  font-size: 14px !important;
+}
+
+.sign-up a
+{
+  color: #3366FF;
+}
