Stop list bullet from appearing on drag.

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -39,7 +39,7 @@
     padding: 12px 0 11px 0;
     position: relative;
     font-size: 18px;
-    text-decoration: none;
+    list-style-type: none;
     line-height: 1.1em;
     min-height: 1.1em;
     border-bottom: 1px solid #cccccc;
