--- a/app/assets/javascripts/backbone/templates/accounts/new.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/accounts/new.js.jst.ejs
@@ -4,13 +4,13 @@
 		<input name="username" type="text" placeholder="Username or email">
  	</p>
 	<p>
-		<input name="password" type="password" placeholder="Password"/>
+		<input name="password" type="password" placeholder="Password">
 	</p>
 	<p>
-		<input name="confirm_password" type="password" placeholder="Confirm password"/>
+		<input name="confirm_password" type="password" placeholder="Confirm password">
 	</p>
 	<p>
-		<input name="secret" type="password" placeholder="Secret word"/>
+		<input name="secret" type="password" placeholder="Secret word">
 	</p>
 
  	<div class="submit">
