Limit context text box.

--- a/app/assets/javascripts/backbone/templates/tasks/context.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/context.js.jst.ejs
@@ -2,5 +2,5 @@
 	<span class='context'></span>
 </div>
 <div class='edit'>
-	<input type='text' name='context_input'>
+	<input type='text' name='context_input' maxlength='18'>
 </div>
