--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -86,7 +86,7 @@ div#navigation
 
   #navigation li a:hover
   {
-    background-color: #000;
+    background-color: #333;
   }
 
   #navigation li a.selected
@@ -102,17 +102,15 @@ div#navigation
 
 div#notice-container
 {
-  height: 37px;
+  height: 38px
 }
 
 div#notice-bar
 {
-  height: 37px;
-  line-height: 37px;
-  text-align:center;
+  height: 36px;
+  line-height: 36px;
   background-color: #f1f1f1;
-  border-bottom-color: #d2d2d2;
-  border-bottom-width: 1px;
+  border: 1px solid #d2d2d2;
   display: none;
   font-size: 15px;
   font-weight: bold;
@@ -139,12 +137,10 @@ div#notice-bar.error
 
 div.rubbish
 {
-  height: 37px;
-  line-height: 37px;
-  text-align:center;
+  height: 36px;
+  line-height: 36px;
   background-color: #f1f1f1;
-  border-bottom-color: #d2d2d2;
-  border-bottom-width: 1px;
+  border: 1px solid #d2d2d2;
   display: none;
   font-size: 15px;
   font-weight: bold;
@@ -158,11 +154,12 @@ div.rubbish img
   text-align: center;
 }
 
-.notice-content
+div.notice-content
 {
-  margin-left: auto;
   margin-right: auto;
-  width: 20em;
+  margin-left: auto;
+  width: 70%;
+  text-align: center;
 }
 
 div#footer
@@ -175,11 +172,11 @@ div#footer
   #footer ul
   {
     list-style-type: none;
-    width: auto;
+    width: 50%;
+    margin: 0 auto;
     position: relative;
     display: block;
     font-size: 11px;
-    float: left;
   }
 
   #footer li
@@ -222,7 +219,3 @@ div#footer-container
   overflow: auto;
 }
 
-.border
-{
-  //box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;
-}
