--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -31,7 +31,8 @@
 
 #task-list {
   width: 780px;
-  margin-top: 10px;
+  margin-top: 7px;
+  overflow: visible;
 }
   #task-list li {
     position: relative;
@@ -41,10 +42,25 @@
     min-height: 1.1em;
   }
 
+    #task-list .mover
+    {
+      width: 10px;
+      margin-top: 6px;
+      height: 30px;
+      display: inline-block;
+      float: left;
+      background: #ddd;
+      cursor: move;
+    }
+
+    #task-list .mover:hover
+    {
+    }
+
     #task-list .task
     {
-      width: 699px;
-      padding: 12px 0 11px 0;
+      width: 679px;
+      padding: 12px 0 11px 10px; 
       display: inline-block;
       border-bottom: 1px solid #cccccc;
     }  
@@ -67,17 +83,14 @@
       float: right 
     }
 
-    #task-list li:after {
-      content: "\0020";
-      display: block;
-      height: 0;
-      clear: both;
-      overflow: hidden;
-      visibility: hidden;
-    }
     #task-list li.editing_task_text, li.editing_task_date {
       padding: 0;
       border-bottom: 0;
+    }
+
+    #task-list li.done-task .task-done-menu
+    {
+      display: block;
     }
   #task-list .editing_task_text .task_text,
   #task-list .edit_text {
@@ -118,7 +131,7 @@
       border: 1px solid #999999;
      }
 
-  .task-menu
+  .task-menu, .task-done-menu
   {
     width: 70px;
     padding-left: 1px;
@@ -130,13 +143,13 @@
     float: right;
   }
 
-  .task-menu img
+  .task-menu img, .task-done-menu img
   {
     vertical-align: middle;
     cursor: pointer;
   }
 
-  .task-menu img:hover
+  .task-menu img:hover, .task-done-menu img:hover
   {
     opacity:0.5;
   }
@@ -145,7 +158,6 @@
   margin-top:10px;
   position: relative;
 	font-size:16px;
-  font-weight: bold;
   overflow: visible;
   z-index: 3000;
 }
@@ -166,10 +178,15 @@ ul#contexts-list {
 #contexts-list li span {
   display:block;
   color: #4a4546;
+  font-weight: 500;
   text-decoration:none;
   height:25px;
   margin:0;
   cursor: pointer;
+}
+
+#contexts-list li span:hover {
+  opacity: 0.6;
 }
 
 .dragged-context li span {
@@ -181,9 +198,10 @@ ul#contexts-list {
   cursor: pointer;
 }
 
-#contexts-list li.selected {
+#contexts-list li.selected span {
   color: #000;
-  text-decoration:underline;
+  font-weight: bolder;
+  font-size: 18px;
 }
 
 #contexts .editing .display,
@@ -232,4 +250,16 @@ ul#contexts-list {
 
 .today {
   font-weight: bold;
+}
+
+.highlight span {
+  color: #009900 !important;
+}
+
+.ui-multisort-grouped .mover {
+  background: #555 !important;
+}
+
+.ui-state-highlight {
+  background: red;
 }
