--- a/app/assets/javascripts/backbone/templates/tasks/task.js.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/task.js.jst.ejs
@@ -1,3 +1,4 @@
+<div class="mover" />
 <div class='task'>
 	<div class='task_text'></div>	
 	<div class='task_date'><span style="color: #999; font-size: 14px; cursor: pointer;" class="task_date">[Add date]</span></div>
@@ -13,5 +14,7 @@
 	<img src="/assets/tick.png" class='tick'>
 	<img src="/assets/putoff.png" class='putoff'>
 </div>
-
+<div class='task-done-menu'>
+	<img src="/assets/tick_done.png" class='donetick'>
+</div>
 
