--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   $(function() {
-      window.app = new Privydo.Routers.Signup;
+      window.app = new IronTask.Routers.Signup;
       Backbone.history.start();
       });
 </script>
