--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,11 +59,11 @@
             </div>
             <% if flash[:notice] %>
               <script>
-                new Privydo.Views.Notice( {message: '<%= flash[:notice] %>'});
+                new IronTask.Views.Notice( {message: '<%= flash[:notice] %>'});
               </script>
             <% elsif flash[:error] %>
               <script>
-                new Privydo.Views.Error( {message: '<%= flash[:error] %>'});
+                new IronTask.Views.Error( {message: '<%= flash[:error] %>'});
               </script>
             <% end %>
             <div class="rubbish">
